--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: ./docker/php
     volumes: 
       - ./laravel_app:/work
+    depends_on: 
+      - mysql
   
   nginx:
     image: nginx:1.18-alpine
@@ -13,3 +15,13 @@ services:
       - ./laravel_app:/work
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     working_dir: /work
+    depends_on: 
+      - php
+
+  mysql:
+    build: ./docker/mysql
+    volumes: 
+      - db-volume:/var/lib/mysql
+
+volumes: 
+  db-volume:
